# prowin-assistant

./: .env.example  .gitignore  CLAUDE.md  COMPLIANCE.md  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/api/: audit.py  belege.py  buchungen.py  euer.py  exports.py  webhooks.py
backend/app/db/: base.py  models.py
backend/app/providers/: __init__.py
backend/app/providers/llm/: base.py  live.py  stub.py
backend/app/providers/ocr/: base.py  live.py  stub.py
backend/app/providers/whatsapp/: base.py  meta.py  stub.py
backend/app/schemas/: beleg.py  buchung.py  euer.py  export.py  llm.py
backend/app/services/: audit.py  classification.py  confirmation.py  euer.py  export.py  immutability.py  intent.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_whatsapp_meta.py
backend/tests/: conftest.py  test_beleg_flow.py  test_compliance.py  test_euer.py  test_export.py  test_intent.py  test_whatsapp_meta.py
docs/: architecture.md  decisions.md  verfahrensdokumentation-vorlage.md
frontend/: README.md
n8n/: README.md
scripts/: demo.py  seed.py
