[project]
name = "prowin-assistant"
version = "0.1.0"
description = "WhatsApp-zentrierter Beleg- & EÜR-Vorbereitungs-Assistent für ProWin-Vertriebspartner"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aioboto3>=13.2.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "fpdf2>=2.8.1",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0",
    "types-python-dateutil>=2.9.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = { "" = "backend" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
